recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: value length is not a member of Double
recule(shrink.length);
              ^